# fastapi_helloworld

./: README.md  pyproject.toml
fastapi_helloworld/: main.py
tests/: test_main.py
