[tool.poetry]
name = "fastapi-helloworld"
version = "0.1.0"
description = ""
authors = ["Hasan Sohail  <hasansohail793@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
